--- a/zenwave-jpa-baseline/pom.xml
+++ b/zenwave-jpa-baseline/pom.xml
@@ -30,6 +30,9 @@
 		<spring-boot.version>${project.parent.version}</spring-boot.version>
         <spring-cloud.version>2025.1.0</spring-cloud.version>
         <spring-cloud-stream-schema.version>2.2.1.RELEASE</spring-cloud-stream-schema.version>
+        <spring-modulith.version>2.0.0</spring-modulith.version>
+        <avro.version>1.11.1</avro.version>
+        <zenwave-modulith-events-scs.version>1.1.0</zenwave-modulith-events-scs.version>
 
 		<zenwave.version>2.2.0</zenwave.version>
         <openapi-generator-maven-plugin.version>7.17.0</openapi-generator-maven-plugin.version>
@@ -37,9 +40,9 @@
 		<jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-		<karate.version>1.4.1</karate.version>
+		<karate.version>1.5.2</karate.version>
         <testcontainers.version>1.20.4</testcontainers.version>
-        <archunit-junit5.version>1.4.0</archunit-junit5.version>
+        <archunit-junit5.version>1.4.1</archunit-junit5.version>
         <springdoc-openapi-starter-webmvc-ui.version>2.8.3</springdoc-openapi-starter-webmvc-ui.version>
         <spotless-maven-plugin.version>2.44.3</spotless-maven-plugin.version>
         <palantir-java-format.version>2.55.0</palantir-java-format.version>
@@ -52,6 +55,13 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.modulith</groupId>
+				<artifactId>spring-modulith-bom</artifactId>
+				<version>${spring-modulith.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -149,7 +159,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.intuit.karate</groupId>
+			<groupId>io.karatelabs</groupId>
 			<artifactId>karate-core</artifactId>
 			<version>${karate.version}</version>
 		</dependency>
@@ -192,16 +202,16 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>${lombok-mapstruct-binding.version}</version>
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${mapstruct.version}</version>
-                        </path>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok-mapstruct-binding</artifactId>
-                            <version>${lombok-mapstruct-binding.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -219,6 +229,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>io.spring.javaformat</groupId>
+				<artifactId>spring-javaformat-maven-plugin</artifactId>
+				<version>${spring-javaformat-maven-plugin.version}</version>
+			</plugin>
+            <plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
 				<version>${spotless-maven-plugin.version}</version>
@@ -235,7 +250,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.12</version>
+				<version>0.8.14</version>
 				<configuration>
 					<excludes>
 						<exclude>**/config/**</exclude>
@@ -255,6 +270,58 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Surefire Plugin for Unit Tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/*IT.java</exclude>
+						<exclude>**/*IntegrationTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<!-- Failsafe Plugin for Integration Tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.5.1</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<includes>
+								<include>**/*IT.java</include>
+								<include>**/*IntegrationTest.java</include>
+							</includes>
+							<excludes>
+								<exclude>**/*KarateIntegrationTest.java</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<execution>
+						<!-- Failsafe Plugin for API Integration Tests (not transactional) -->
+						<id>api-test</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<includes>
+								<include>**/*KarateIntegrationTest.java</include>
+							</includes>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -333,7 +400,7 @@
                                     <configOptions>
                                         <role>provider</role>
                                         <templates>SpringCloudStream</templates>
-                                         <modelPackage>${asyncApiModelPackage}</modelPackage>
+                                        <modelPackage>${asyncApiModelPackage}</modelPackage>
                                         <producerApiPackage>${asyncApiProducerApiPackage}</producerApiPackage>
                                         <consumerApiPackage>${asyncApiConsumerApiPackage}</consumerApiPackage>
                                         <!-- <avroCompilerProperties.imports>${asyncapi.avro.imports}</avroCompilerProperties.imports> -->
