--- a/examples/customer-address-jpa/pom.xml
+++ b/examples/customer-address-jpa/pom.xml
@@ -288,6 +288,20 @@
 				<artifactId>spring-javaformat-maven-plugin</artifactId>
 				<version>${spring-javaformat-maven-plugin.version}</version>
 			</plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless-maven-plugin.version}</version>
+                <configuration>
+                    <java>
+                        <palantirJavaFormat>
+                            <version>${palantir-java-format.version}</version>
+                            <style>PALANTIR</style>
+                            <formatJavadoc>false</formatJavadoc>
+                        </palantirJavaFormat>
+                    </java>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -422,12 +436,11 @@
                         <version>${zenwave.version}</version>
                         <configuration>
                             <inputSpec>${asyncapi.inputSpec}</inputSpec>
+                            <skip>false</skip>
                             <addCompileSourceRoot>true</addCompileSourceRoot>
                             <addTestCompileSourceRoot>true</addTestCompileSourceRoot>
                             <!-- <authentication>-->
-                            <!--    <authentication>-->
-                            <!--        <key>APIKEY</key><value>xxxxxx</value><type>HEADER</type><urlPattern>*</urlPattern> -->
-                            <!--    </authentication>-->
+                            <!--     <authentication><key>API_KEY</key><value>XXX</value></authentication> -->
                             <!-- </authentication>-->
                         </configuration>
                         <executions>
