--- a/zenwave-mongodb-baseline/pom.xml
+++ b/zenwave-mongodb-baseline/pom.xml
@@ -81,10 +81,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aspectj</artifactId>
+        </dependency>
 		<!-- mongodb -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
