--- a/examples/asyncapi-shopping-cart/pom.xml
+++ b/examples/asyncapi-shopping-cart/pom.xml
@@ -8,8 +8,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.0</version>
-        <relativePath/>
+        <version>4.0.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>io.example.asyncapi.shoppingcart</groupId>
@@ -20,21 +20,23 @@
     <description>AsyncAPI Shopping Cart Example</description>
 
     <properties>
-        <java.version>21</java.version>
-
-        <zenwave.version>2.2.0</zenwave.version>
+        <java.version>25</java.version>
 
         <spring-boot.version>${project.parent.version}</spring-boot.version>
-        <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <spring-cloud.version>2025.1.0</spring-cloud.version>
         <spring-cloud-stream-schema.version>2.2.1.RELEASE</spring-cloud-stream-schema.version>
         <avro.version>1.11.1</avro.version>
+
+        <zenwave.version>2.2.0</zenwave.version>
+        <openapi-generator-maven-plugin.version>7.17.0</openapi-generator-maven-plugin.version>
 
         <jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <lombok.version>1.18.42</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <karate.version>1.4.1</karate.version>
-        <archunit-junit5.version>1.4.0</archunit-junit5.version>
+        <testcontainers.version>1.20.4</testcontainers.version>
+        <archunit-junit5.version>1.4.1</archunit-junit5.version>
         <springdoc-openapi-starter-webmvc-ui.version>2.8.3</springdoc-openapi-starter-webmvc-ui.version>
         <spotless-maven-plugin.version>2.44.3</spotless-maven-plugin.version>
         <palantir-java-format.version>2.55.0</palantir-java-format.version>
