fix: spring-cloud-stream binding suffix (removing trailing -0)

--- a/examples/customer-address-jpa/src/main/resources/application.yml
+++ b/examples/customer-address-jpa/src/main/resources/application.yml
@@ -51,10 +51,8 @@ spring:
   cloud:
     stream:
       kafka.binder.enable-observation: true
-      function:
-        definition: on-customer-event;
       bindings:
-        on-customer-event-out-0:
+        on-customer-event-out:
           destination: customer.events.avro
           content-type: application/*+avro
           producer:
