--- a/examples/kustomer-address-jpa/src/main/resources/application.yml
+++ b/examples/kustomer-address-jpa/src/main/resources/application.yml
@@ -46,5 +46,5 @@ spring:
       function:
         definition: on-customer-event;
       bindings:
-        on-customer-event-out-0:
+        on-customer-event-out:
           destination: customer.events
